@@ -1,6 +1,8 @@
 co2monitor (0.0.7) UNRELEASED; urgency=medium
 
   * better internal structure
+  * use gettext for i18n
+  * add German translation
 
  -- Yann Büchau <yann.buechau@web.de>  Fri, 04 Nov 2016 14:43:16 +0100
 
